feat: optimize storybook

--- a/src/welcome.stories.mdx
+++ b/src/welcome.stories.mdx
@@ -1,4 +1,11 @@
-# Miever UI
+<!-- Badge.stories.mdx -->
+
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
+
+
+<Meta title="Welcome" />
+
+<img src="/miever_ui.jpeg" />
 
 Miever UI is a personal React Components Library which can provide plenty of UI components to enrich my web applications.
 
@@ -28,5 +35,6 @@ const App = () => (
   </>
 );
 ```
+
 
 
