--- a/src/welcome.stories.mdx
+++ b/src/welcome.stories.mdx
@@ -1,6 +1,4 @@
-<!-- Badge.stories.mdx -->
-
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 
 
 <Meta title="Welcome" />
